Changelog
=========


1.0.0a3 (unreleased)
--------------------

- Nothing changed yet.


1.0.0a2 (2016-07-06)
--------------------

- Fix offcanvas navigation on iOS devices.
  Rework revealing offcanvas navigation using two additional wrappers.
  Refactor styling.
  [Kevin Bieri]


1.0.0a1 (2016-07-06)
--------------------

- Init release